apollo-federation/src/connectors/expand/tests/snapshots/connectors@namespace.graphql.snap
---
source: apollo-federation/src/connectors/expand/tests/mod.rs
expression: connectors.by_service_name
input_file: apollo-federation/src/connectors/expand/tests/schemas/expand/namespace.graphql
---
{
    "connectors_Query_me_0": Connector {
        id: ConnectId {
            subgraph_name: "connectors",
            source_name: Some(
                "v1",
            ),
            named: None,
            directive: Field(
                ObjectOrInterfaceFieldDirectivePosition {
                    field: Object(Query.me),
                    directive_name: "connect",
                    directive_index: 0,
                },
            ),
        },
        transport: Some(
            HttpJsonTransport {
                source_template: Some(
                    StringTemplate {
                        parts: [
                            Constant(
                                Constant {
                                    value: "http://127.0.0.1",
                                    location: 0..16,
                                },
                            ),
                        ],
                    },
                ),
                connect_template: StringTemplate {
                    parts: [
                        Constant(
                            Constant {
                                value: "/me",
                                location: 0..3,
                            },
                        ),
                    ],
                },
                method: Get,
                headers: [],
                body: None,
                source_path: None,
                source_query_params: None,
                connect_path: None,
                connect_query_params: None,
            },
        ),
        selection: JSONSelection {
            inner: Named(
                SubSelection {
                    selections: [
                        NamedSelection {
                            prefix: None,
                            path: WithRange {
                                node: Path(
                                    PathSelection {
                                        path: WithRange {
                                            node: Key(
                                                WithRange {
                                                    node: Field(
                                                        "id",
                                                    ),
                                                    range: Some(
                                                        0..2,
                                                    ),
                                                },
                                                WithRange {
                                                    node: Empty,
                                                    range: Some(
                                                        2..2,
                                                    ),
                                                },
                                            ),
                                            range: Some(
                                                0..2,
                                            ),
                                        },
                                    },
                                ),
                                range: Some(
                                    0..2,
                                ),
                            },
                        },
                        NamedSelection {
                            prefix: None,
                            path: WithRange {
                                node: Path(
                                    PathSelection {
                                        path: WithRange {
                                            node: Key(
                                                WithRange {
                                                    node: Field(
                                                        "name",
                                                    ),
                                                    range: Some(
                                                        3..7,
                                                    ),
                                                },
                                                WithRange {
                                                    node: Empty,
                                                    range: Some(
                                                        7..7,
                                                    ),
                                                },
                                            ),
                                            range: Some(
                                                3..7,
                                            ),
                                        },
                                    },
                                ),
                                range: Some(
                                    3..7,
                                ),
                            },
                        },
                    ],
                    range: Some(
                        0..7,
                    ),
                },
            ),
            spec: V0_4,
        },
        config: None,
        max_requests: None,
        entity_resolver: None,
        spec: V0_4,
        schema_subtypes_map: {},
        request_headers: {},
        response_headers: {},
        request_variable_keys: {},
        response_variable_keys: {},
        batch_settings: None,
        error_settings: ConnectorErrorsSettings {
            message: None,
            source_extensions: None,
            connect_extensions: None,
            connect_is_success: None,
        },
        requires: [],
        output_type: Some(
            Named(
                "User",
            ),
        ),
        label: Label(
            "connectors.v1 http: GET /me",
        ),
    },
    "connectors_Mutation_user_0": Connector {
        id: ConnectId {
            subgraph_name: "connectors",
            source_name: None,
            named: None,
            directive: Field(
                ObjectOrInterfaceFieldDirectivePosition {
                    field: Object(Mutation.user),
                    directive_name: "connect",
                    directive_index: 0,
                },
            ),
        },
        transport: None,
        selection: JSONSelection {
            inner: Value(
                WithRange {
                    node: Path(
                        PathSelection {
                            path: WithRange {
                                node: Expr(
                                    WithRange {
                                        node: Object(
                                            SubSelection {
                                                selections: [],
                                                range: Some(
                                                    2..4,
                                                ),
                                            },
                                        ),
                                        range: Some(
                                            2..4,
                                        ),
                                    },
                                    WithRange {
                                        node: Empty,
                                        range: Some(
                                            5..5,
                                        ),
                                    },
                                ),
                                range: Some(
                                    0..5,
                                ),
                            },
                        },
                    ),
                    range: Some(
                        0..5,
                    ),
                },
            ),
            spec: V0_4,
        },
        config: None,
        max_requests: None,
        entity_resolver: None,
        spec: V0_4,
        schema_subtypes_map: {},
        request_headers: {},
        response_headers: {},
        request_variable_keys: {},
        response_variable_keys: {},
        batch_settings: None,
        error_settings: ConnectorErrorsSettings {
            message: None,
            source_extensions: None,
            connect_extensions: None,
            connect_is_success: None,
        },
        requires: [],
        output_type: Some(
            Named(
                "UserMutations",
            ),
        ),
        label: Label(
            "connectors. mappingOnly",
        ),
    },
    "connectors_UserMutations_update_0": Connector {
        id: ConnectId {
            subgraph_name: "connectors",
            source_name: Some(
                "v1",
            ),
            named: None,
            directive: Field(
                ObjectOrInterfaceFieldDirectivePosition {
                    field: Object(UserMutations.update),
                    directive_name: "connect",
                    directive_index: 0,
                },
            ),
        },
        transport: Some(
            HttpJsonTransport {
                source_template: Some(
                    StringTemplate {
                        parts: [
                            Constant(
                                Constant {
                                    value: "http://127.0.0.1",
                                    location: 0..16,
                                },
                            ),
                        ],
                    },
                ),
                connect_template: StringTemplate {
                    parts: [
                        Constant(
                            Constant {
                                value: "/api/users/",
                                location: 0..11,
                            },
                        ),
                        Expression(
                            Expression {
                                expression: JSONSelection {
                                    inner: Value(
                                        WithRange {
                                            node: Path(
                                                PathSelection {
                                                    path: WithRange {
                                                        node: Var(
                                                            WithRange {
                                                                node: $args,
                                                                range: Some(
                                                                    0..5,
                                                                ),
                                                            },
                                                            WithRange {
                                                                node: Key(
                                                                    WithRange {
                                                                        node: Field(
                                                                            "id",
                                                                        ),
                                                                        range: Some(
                                                                            6..8,
                                                                        ),
                                                                    },
                                                                    WithRange {
                                                                        node: Empty,
                                                                        range: Some(
                                                                            8..8,
                                                                        ),
                                                                    },
                                                                ),
                                                                range: Some(
                                                                    5..8,
                                                                ),
                                                            },
                                                        ),
                                                        range: Some(
                                                            0..8,
                                                        ),
                                                    },
                                                },
                                            ),
                                            range: Some(
                                                0..8,
                                            ),
                                        },
                                    ),
                                    spec: V0_4,
                                },
                                location: 12..20,
                            },
                        ),
                    ],
                },
                method: Post,
                headers: [],
                body: None,
                source_path: None,
                source_query_params: None,
                connect_path: None,
                connect_query_params: None,
            },
        ),
        selection: JSONSelection {
            inner: Value(
                WithRange {
                    node: Path(
                        PathSelection {
                            path: WithRange {
                                node: Var(
                                    WithRange {
                                        node: $,
                                        range: Some(
                                            0..1,
                                        ),
                                    },
                                    WithRange {
                                        node: Key(
                                            WithRange {
                                                node: Field(
                                                    "result",
                                                ),
                                                range: Some(
                                                    2..8,
                                                ),
                                            },
                                            WithRange {
                                                node: Empty,
                                                range: Some(
                                                    8..8,
                                                ),
                                            },
                                        ),
                                        range: Some(
                                            1..8,
                                        ),
                                    },
                                ),
                                range: Some(
                                    0..8,
                                ),
                            },
                        },
                    ),
                    range: Some(
                        0..8,
                    ),
                },
            ),
            spec: V0_4,
        },
        config: None,
        max_requests: None,
        entity_resolver: Some(
            Implicit,
        ),
        spec: V0_4,
        schema_subtypes_map: {},
        request_headers: {},
        response_headers: {},
        request_variable_keys: {
            $args: {
                "id",
            },
        },
        response_variable_keys: {},
        batch_settings: None,
        error_settings: ConnectorErrorsSettings {
            message: None,
            source_extensions: None,
            connect_extensions: None,
            connect_is_success: None,
        },
        requires: [],
        output_type: Some(
            Named(
                "String",
            ),
        ),
        label: Label(
            "connectors.v1 http: POST /api/users/{$args.id}",
        ),
    },
}
